styling and layout bugs

--- a/app/styles/_blog.scss
+++ b/app/styles/_blog.scss
@@ -18,6 +18,34 @@
       text-align: center;
       margin: 0 0 15px 0;
     }
+
+    .image-container {
+      border: 1px solid $boxBorder;
+      background-clip: content-box;
+      padding: 4px;
+      overflow: hidden;
+      width: 100%;
+      text-align: center;
+    }
+
+    blockquote {
+      background: white;
+      border-left: 5px solid #ccc;
+      margin: 1.5em 10px;
+      padding: 0.5em 10px;
+      quotes: "\201C""\201D""\2018""\2019";
+    }
+    blockquote:before {
+      color: #ccc;
+      content: open-quote;
+      font-size: 4em;
+      line-height: 0.1em;
+      margin-right: 0.25em;
+      vertical-align: -0.4em;
+    }
+    blockquote p {
+      display: inline;
+    }
   }
 
   .user-comments {
